--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -9,31 +9,28 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         >
         <ImageView
             android:id="@+id/image_item_category"
-            android:padding="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@mipmap/ic_launcher"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/shape"
-            android:layout_alignParentBottom="true"/>
 
         <TextView
             android:padding="5dp"
-            android:textColor="@android:color/white"
+            android:layout_weight="1"
+            android:textColor="@android:color/black"
             android:textAppearance="@android:style/TextAppearance.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/title_item_category"
             android:text="Title"
-            android:layout_alignParentBottom="true"/>
-    </RelativeLayout>
+           />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
