--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/aboutus_menu"
+        android:orderInCategory="100"
+        android:title="About us"
+        app:showAsAction="never" />
+
+    <item
+    android:id="@+id/openSource_licences"
+    android:orderInCategory="100"
+    android:title="Open Source Licences"
+    app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Settings"
         app:showAsAction="never" />
 </menu>
