added dark theme to app

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,11 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#bfbfbf"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.newsbuzz.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
     <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="7dp"
         android:id="@+id/staggered_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
