--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="#bfbfbf"
     tools:context="com.newsbuzz.CategoryActivity">
 
     <android.support.design.widget.AppBarLayout
