--- a/app/src/main/res/layout/content_category.xml
+++ b/app/src/main/res/layout/content_category.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#bfbfbf"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.newsbuzz.CategoryActivity"
     tools:showIn="@layout/activity_category">
 <android.support.v7.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/list_category"
-    />
+    android:id="@+id/list_category"/>
 </RelativeLayout>
