--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
     card_view:cardCornerRadius="2dp"
     card_view:cardElevation="8dp"
-    android:layout_margin="8dp"
+    android:layout_margin="4dp"
     card_view:cardUseCompatPadding="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,25 +12,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
         <ImageView
+            android:layout_margin="10dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:id="@+id/image_item_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher"/>
 
         <TextView
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp"
+            android:layout_gravity="center"
             android:padding="5dp"
             android:layout_weight="1"
-            android:textColor="@android:color/black"
-            android:textAppearance="@android:style/TextAppearance.Medium"
+            android:textColor="#505050"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/title_item_category"
-            android:text="Title"
-           />
+            android:text="Title"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
