--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -20,16 +20,18 @@
     </android.support.design.widget.AppBarLayout>
 
         <LinearLayout
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="65dp"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
             <TextView
+                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="15dp"
                 android:textSize="20sp"
                 android:text="Edit Your Preferences"/>
             <CheckBox
