--- a/app/src/main/res/layout/staggered_card.xml
+++ b/app/src/main/res/layout/staggered_card.xml
@@ -2,25 +2,27 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardUseCompatPadding="true"
-    android:elevation="4dp">
-<RelativeLayout
+    android:elevation="8dp">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:background="#ff4411"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
+        android:layout_margin="10dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="fitCenter"
         android:id="@+id/background_staggeredcard"/>
     <TextView
-        android:textSize="12sp"
-        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:textSize="28sp"
+        android:layout_gravity="center"
         android:id="@+id/title_staggeredcard"
         android:text="Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-</RelativeLayout>
+</LinearLayout>
 </android.support.v7.widget.CardView>
