--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="primary">#1a1a1a</color>
+    <color name="primary_dark">#000000</color>
+    <color name="accent">#607D8B</color>
+    <color name="divider">#B6B6B6</color>
 </resources>
