--- a/app/src/main/res/layout/activity_enter.xml
+++ b/app/src/main/res/layout/activity_enter.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.newsbuzz.MainActivity">
+    tools:context="com.newsbuzz.EnterActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,12 +21,5 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:id="@+id/fab"
-        android:src="@android:drawable/ic_input_add"/>
+    <include layout="@layout/content_enter" />
 </android.support.design.widget.CoordinatorLayout>
