--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="primary">#1a1a1a</color>
     <color name="primary_dark">#000000</color>
-    <color name="accent">#607D8B</color>
+    <color name="accent">#1a1a1a</color>
     <color name="divider">#B6B6B6</color>
 </resources>
