added photo upload feature to upload activity

--- a/app/src/main/res/layout/content_enter.xml
+++ b/app/src/main/res/layout/content_enter.xml
@@ -1,40 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.newsbuzz.EnterActivity"
-    tools:showIn="@layout/activity_enter"
-    android:orientation="vertical">
-<android.support.design.widget.TextInputLayout
-    android:padding="5dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/title_textinputlayout">
-    <EditText
-        android:hint="Title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/title_edittext"/>
-
-</android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
         android:padding="5dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/description_textinputlayout">
-    <EditText
-        android:hint="Description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/description_edittext"/>
-    </android.support.design.widget.TextInputLayout>
-    <Button
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Upload"
-        android:id="@+id/submit_enter"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        tools:context="com.newsbuzz.EnterActivity"
+        tools:showIn="@layout/activity_enter"
+        android:orientation="vertical">
+            <ImageButton
+                android:src="@drawable/upload"
+                android:padding="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:scaleType="fitXY"/>
+        <android.support.design.widget.TextInputLayout
+            android:padding="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/title_textinputlayout">
+            <EditText
+                android:hint="Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/title_edittext"/>
+
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:padding="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/description_textinputlayout">
+            <EditText
+                android:hint="Description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/description_edittext"/>
+        </android.support.design.widget.TextInputLayout>
+        <Button
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Upload News"
+            android:id="@+id/submit_enter"/>
+    </LinearLayout>
+
+</ScrollView>
