--- a/app/src/main/res/layout/item_upload.xml
+++ b/app/src/main/res/layout/item_upload.xml
@@ -12,6 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <ImageView
+            android:src="@drawable/upload"
+            android:id="@+id/image_item_upload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"/>
         <TextView
             android:padding="5dp"
             android:layout_weight="1"
