--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,6 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:orderInCategory="50"
+        android:title="Search"
+        android:id="@+id/search_news"
+        android:icon="@android:drawable/ic_search_category_default"
+        app:showAsAction="always"
+        />
+    <item
         android:id="@+id/aboutus_menu"
         android:orderInCategory="100"
         android:title="About us"
