--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -33,5 +33,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/title_item_category"
             android:text="Title"/>
+        <TextView
+            android:padding="5dp"
+            android:layout_gravity="bottom"
+            android:text="Timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/timestamp_item_category"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
